# scoremvp

./: .gitignore  ;'"  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  move_project.ps1  package-lock.json  package.json  pyproject.toml  render.yaml
app/: main.py
app/routers/: profile.py
backend/: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .railwayignore  Dockerfile  LICENSE  Procfile  README.md  add_user_profile_fields.sql  alembic.ini  check_db.py  create_admin.py  create_association_table.py  create_tables.py  create_user.py  docker-compose.yml  env_template.txt  estatisticas.csv  import_data_only.sql  import_stats.py  migrate.sh  nixpacks.toml  railway.toml  requirements-dev.txt  requirements.txt  run_migrations.py  run_tests.bat  run_tests.sh  scoremvp_backup.sql  scoremvp_clean_backup.sql  setup.py  start.bat  start.ps1  start.py  start.sh  start_backend.bat  test_ascii.py  test_config.py  test_conn.py  (+8 more)
backend/alembic/: env.py
backend/app/: __init__.py  app.py  database.py  (+5 more)
frontend/: .env  .eslintrc.json  .gitignore  .lintstagedrc  .prettierrc  .railwayignore  components.json  index.html  jest.config.js  nixpacks.toml  package-lock.json  package.json  railway.toml  start_frontend.bat  tailwind.config.js  tsconfig.json  vite.config.ts
scoremvp-backend/: .gitignore  Dockerfile  README.md  app.py  database.py  railway.toml  requirements.txt  teste_git.md
scoremvp-frontend/: Dockerfile  package-lock.json  package.json  package.json.bak  postcss.config.js  tailwind.config.js
src/: App.tsx  main.tsx
tests/: test_players.py
(+179 files in other folders)
